2008-06-24  Richard Dale  <richard.j.dale@gmail.com>

	* Make both the smoke lib and the kimono bindings use non-const methods
	  in preference to const ones. This is because KConfigBase::group() 
	  behaves differently according to whether the const on non-const
	  version is called via overloading in C++. The non-const variant
	  will now be called in C#, otherwise it appears that the KConfigGroup 
	  returned would silently fail to write anything to disc.

2008-06-18  Richard Dale  <richard.j.dale@gmail.com>

	* Change some namespaces to classes as calling the methods via 'Global'
	  looked a bit clumsy. For instance, KConfig.Global.Config() or
	  KStandardAction.Global.Quit() looked wrong.
	* Add a KSharedConfigPtr marshaller

2008-06-19  Arno Rehn  <arno@arnorehn.de>

	* Prefer const methods over non-const methods.

2008-06-18  Richard Dale  <richard.j.dale@gmail.com>

* Added tutorial examples p3 and p4. p4 crashes on a call to 
  KHTMLPart.Widget(), which could be a problem with modular smoke
  either method lookup or return value marshalling.
* Don't convert QChars to C# chars, keep them as QChars
* Added the name of the current Assembly as the first entry in the args
  array passed to KCmdLineArgs.Init().
* Added the p7 tutorial. There is a problem with this line:

    KConfig config = KApplication.kApplication().SessionConfig();
    location.Text = 
      config.Group("Settings").ReadEntry("defaultPage", "http://localhost");

  The Group() method isn't found in the smoke lib

2008-06-17  Richard Dale  <richard.j.dale@gmail.com>

* Added marshallers for the various types of lists in the KDE classes
* Special case the Init() methods in KCmdLineArgs to take string[] args,
  for the C++ 'int, char[] *' pairs.