@@ -1,6 +1,8 @@
 PROJECT(kimono)
 add_subdirectory(tutorials)
 
+INCLUDE(UsePkgConfig)
+
 SET(SRC_CS ${CMAKE_CURRENT_SOURCE_DIR}/src/Kimono.cs
 	${CMAKE_CURRENT_SOURCE_DIR}/src/AssemblyInfo.cs
 	${CMAKE_CURRENT_SOURCE_DIR}/kde/*.cs
@@ -11,6 +13,8 @@ SET(SRC_CS ${CMAKE_CURRENT_SOURCE_DIR}/src/Kimono.cs
 
 SET(SRC_KIMONO src/kimono.cpp src/kdehandlers.cpp)
 
+SET(SRC_FACTORY src/kmonopluginfactory.cpp)
+
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/smoke 
 	${CMAKE_CURRENT_SOURCE_DIR}/../qyoto/src ${QT_INCLUDES})
 LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})
@@ -18,9 +22,20 @@ KDE4_ADD_LIBRARY(kimono MODULE ${SRC_KIMONO})
 ADD_DEPENDENCIES(kimono smokekde)
 TARGET_LINK_LIBRARIES(kimono smokekde qyotoshared ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
 
+# write FindPackage modules for these
+PKGCONFIG(mono MONO_INCLUDES MONO_LINK_DIR MONO_LINK_FLAGS MONO_CFLAGS)
+PKGCONFIG(glib-2.0 GLIB_INCLUDES GLIB_LINK_DIR GLIB_LINK_FLAGS GLIB_CFLAGS)
+
+LINK_DIRECTORIES(${MONO_LINK_DIR} ${GLIB_LINK_DIR})
+INCLUDE_DIRECTORIES(${MONO_INCLUDES} ${GLIB_INCLUDES})
+ADD_DEFINITIONS(${GLIB_CFLAGS} ${MONO_CFLAGS})
+KDE4_ADD_PLUGIN(kmonopluginfactory ${SRC_FACTORY})
+TARGET_LINK_LIBRARIES(kmonopluginfactory ${KDE4_KDECORE_LIBS} qyotoshared ${MONO_LINK_FLAGS})
+
 SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll -keyfile:${KEYFILE})
 ADD_CS_LIBRARY(kde-dotnet "${SRC_CS}" ALL)
 ADD_DEPENDENCIES (kde-dotnet qt-dotnet kimono)
 
 INSTALL(TARGETS kimono LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 INSTALL_GAC(kde-dotnet)
+INSTALL(TARGETS kmonopluginfactory DESTINATION ${PLUGIN_INSTALL_DIR})
